Update package json

--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "contributors": [
     "Johan Leitet <johan.leitet@lnu.se>",
     "Mats Loock <mats.loock@lnu.se>",
-    "// TODO: YOUR NAME <YOUR EMAIL>"
+    "Farzad Fahiminia<ff222cb@student.lnu.se>"
   ],
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "@lnu/eslint-config": "^1.1.4",
-    "vite": "^2.6.7"
+    "@lnu/eslint-config": "^1.1.10",
+    "vite": "^4.5.0"
   }
 }
